# AutonomousLawnMowerROS

./: README.md  rosControl.apk
control/: CMakeLists.txt  package.xml
control/launch/: pdControl.launch  randomWalk.launch  randomWalk_simulation.launch  straightDrive.launch  teleopControl.launch  teleopDecawave.launch  wallFollower.launch  wallFollower_simulation.launch
control/launch/old/: decawaveControl.launch
control/src/: pdControl.cpp  randomWalk.cpp  straightDrive.cpp  teleop.cpp  wallFollower.cpp
control/src/old/: decawaveControl.cpp  randomWalk_old.cpp
interfaces/: CMakeLists.txt  package.xml
interfaces/bno055_driver/Adafruit_BNO055.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
interfaces/bno055_driver/src/: calibData.yaml  calib_imu.py  imuInterface.py
interfaces/config/: config.yaml
interfaces/launch/: testBumper.launch  testDecawave.launch  testI2C.launch  testIMU.launch  testInterfaces.launch  testMotor.launch  testRadarCapacity.launch  testSensor.launch
interfaces/msg/: Bumper.msg  Capacity.msg  Chlorophyll.msg  Control.msg  Decawave.msg  IMU.msg  Odometry.msg  Radar.msg  Sensor.msg
interfaces/src/: bumperInterface.cpp  capacityInterface.cpp  decawaveInterface.cpp  i2cInterface.cpp  motorInterface.cpp  radarInterface.cpp  sensorInterface.cpp
interfaces/src/old/: sensor2Interface.cpp  sensorInterfaceRequest.cpp  testInterfaces.cpp
localization/: CMakeLists.txt  package.xml
localization/launch/: particleFilter_simulation_test.launch  testKalmanFilter.launch
localization/msg/: Pose.msg
localization/src/: coverage.cpp  kalmanFilter.cpp  particleFilter.cpp
mapping/: CMakeLists.txt  package.xml
mapping/launch/: mapping_simulation.launch
mapping/msg/: DP.msg  LC.msg  PG.msg
mapping/src/: dpGeneration.cpp  lcDetection.cpp  pgOptimization.cpp
matlab_gen/jar/: control-0.0.0.md5  interfaces-0.0.0.md5  localization-0.0.0.md5  simulation_environment-0.0.0.md5
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+interfaces/: Bumper.m  Capacity.m  Chlorophyll.m  Control.m  Decawave.m  IMU.m  Odometry.m  Radar.m  Sensor.m
matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+localization/: Pose.m
simulation_environment/: CMakeLists.txt  package.xml
simulation_environment/config/: props.yaml
simulation_environment/launch/: lawn_mower_full.launch
simulation_environment/models/: lawn_mower.gazebo  lawn_mower.xacro  macros.xacro  parameter.xacro
simulation_environment/models/lawn_mower/: lawn_mower.gazebo  lawn_mower.xacro  macros.xacro  parameter.xacro
simulation_environment/src/: chlorophyllSensor_plugin.cpp  odometry_plugin.cpp  odometry_transform.cpp  sensor_transform.cpp  vel_cmd.cpp
simulation_environment/worlds/: lawn_mower.world
