<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>Package for localization of the lawn mower</description>

  <author email="Nils.Rottmann@rob.uni-luebeck.de">Nils Rottmann</author>

  <maintainer email="Nils.Rottmann@rob.uni-luebeck.de">Nils Rottmann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	
  <build_depend>interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>message_generation</build_depend>


  <exec_depend>interfaces</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
